echoserver/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: echo.ishii.ga
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: http
